# CUDAkernels

./: CMakeLists.txt  CMakePresets.json  Main  Main.cpp  README.md  reportSGEMM.md  reportTreeReduction.md  treeReduction.cu  vecAdd.cu
include/: treeReduction.cuh  vecAdd.cuh  vectorDotProduct.cuh
src/: DEVICE.cu  Main.cpp  SGEMM.cu  blockReduceSum.cu  treeReduction.cu  vecAdd.cu  vectorDotProduct.cu
